test/trivial/bradc/whilescope2.chpl
var i = 0;
while (t != 10) {
  var t = i;
  i += 1;
  writeln(t);
}
